style/document.css
/**** Enterprise API Platform document.css ****/

/*---------------------------------------- Added w/JH 3/7/18 end section ----------------------------------------*/

ul {
    list-style: disc outside none;
}
ol {
    list-style: decimal outside none;
}

ul, ul li, ol, ol li {
    margin-left: 13px;
    padding-left: 8px;
}

ul li, ol li {
	padding-bottom: 5px; 
}

ul li p, ol li p{ /*list item subsequent paragraph less space above. Copied from .apidocContent ul li p 6/19/18 GW*/
	padding-top: 5px;
	padding-bottom: 3px;
}

h1 {
    color: #2f6db5;
    font-size: 21px;
    line-height: normal;
    padding: 3px 0 12px 0;
}
h2 {
    color: #2f6db5;
    font-size: 17px;
    line-height: normal;
    padding: 16px 0 8px 0;
}
h3 {
    color: #000000;
    font-size: 16px;
    padding-bottom: 7px;
    line-height: normal;
    padding: 10px 0 5px 0;
}
h5 {
    color: #000000;
    font-size: 14px;
    line-height: normal;
    font-weight: bold;
    padding: 9px 0;
}
blockquote {
  padding: 10px 20px;
  margin: 0 0 20px;
  border-left: 5px solid #cccccc;
  word-wrap: break-word;
  font-style: italic;
}
blockquote p {
	font-size: 100%;
	font-weight: 300;
	padding-bottom: 0px;
	line-height: 1;
}

.divider1 {
		height: 1px;
		background-color: gray;
		font-size: 0;
		width: 100%;
		overflow: hidden;
}

hr { /*Added with JH 4/26/19. To replace div tags coded with divider1, use hr instead, and remove divider1, above, from css. Also note mod to divider1 to make it more generic, not just inside a documentation tag. 12/19/19 adding top and bottom padding values since default is too much.*/
	border: none;
	border-bottom: 1px solid gray;
	padding-bottom: 0px;
	padding-top: 0px;
}

/*---------- Definition list styles (glossary, field descriptions) ----------*/

dl { /*definition list*/
	font-family: Helvetica, Arial, sans-serif;
	font-size: 12px
}

dl dt { /*glossary term*/
	font-family: Helvetica, Arial, sans-serif;
	font-size: 12px;
	font-weight: bold;
	padding-bottom: 3px;
}

dl dd { /*glossary definition*/
	font-family: Helvetica, Arial, sans-serif;
	font-size: 12px;
	padding-bottom: 12px;
	padding-left: 18px;
}

.index { /* Added w/JH 4/26/19 for alphabar on glossary. Each inline index letter.*/
	border-bottom: 1px solid #2f6db5;
	padding-bottom: 3px;
	margin-bottom: 10px;
}

.index_nav { /* Added w/JH 4/26/19 for alphabar on glossary. Top nav alphabar.*/
	padding-bottom: 3px;
	padding-left: 0;
	margin-bottom: 10px;
	margin-left: 0;
}

.index_nav li { /* Added w/JH 4/26/19 for alphabar on glossary. Each letter on top nav alphabar*/
	display: inline;
	border-left: 1px solid #2f6db5;
	margin-left: 1px;
	padding-top: 5px;
	margin-right: 5px;
	font-weight: bold;
}

.index_nav li:first-child { /* Added w/JH 4/26/19 for alphabar on glossary. Exclude first letter on top nav alphabar*/
	border: none;
}


/*---------- End Definition list styles ----------*/

/*---------- Core shared styles brought to basic definitions 5/7/18----------*/

pre { /*Message and code samples. Scroll bar. 5/17/18 removing pre from supportContent and apiDoc. Using API doc color as the gray is used in tables*/
	background: #F8F4EE;
	font-family: "Courier New", Courier, monospace;
	font-size: 11px;
	padding-top: 0px;
	padding-right: 2px;
	padding-bottom: 10px;
	padding-left: 2px;
	overflow-x:auto;
	line-height: 15px;
}


/*---------- End Core shared styles brought to basic definitions 5/7/18----------*/


/*---------------------------------------- End of basic styles section ----------------------------------------*/

/*---------------------------------------- API docs / security doc: apidoc.css styles ----------------------------------------*/
/*---------- API docs / security doc: paragraph styles ----------*/

.apidocContent p {
	display: block;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 12px;
	color: #000;
	padding-bottom: 6px;
	padding-top: 0;
}

span.apidoc_code { /*span tag for inline code formatting*/
	font-family: "Courier New", Courier, mono;
	font-size: 12px;
}

p.apidoc_note { /*Notes in paragraphs: pale gray background*/
	font-family: Arial;
	font-size: 12px;
	background-color: #F6F6F6;
	padding: 11px;
	display:block;
}

.apidoc_note { /*span tag for note in procedures: pale gray background*/
	font-family: Arial;
	font-size: 12px;
	background-color: #F6F6F6;
	padding: 11px;
	display:block;
}

p.apidoc_image_p { /*For images: Extra overflow property gives scroll bar*/
	font-family: Helvetica, Arial, sans-serif;
	font-size: 12px;
	line-height: 16px;
	color: #000000;
	overflow-x:auto;
}

.apidoc_image_p { /*span tag for images in procedures, with display:block.*/
	font-family: Helvetica, Arial, sans-serif;
	font-size: 12px;
	line-height: 16px;
	color: #000000;
	overflow-x:auto;
	display:block;
}

.apidoc_overflow { /*Scroll bar below images. Inline style.*/
	overflow-x:auto;
}

.apidoc_p_subsequent {
	font-family: Helvetica, Arial, sans-serif;
	font-size: 12px;
	line-height: 16px;
	color: #000000;
	padding-bottom: 3px;
}

p.apidoc_backtotop { /* horiz rule for below back to top lines */
	border-bottom: 1px solid gray; 
	padding-top: 12px;
	padding-bottom: 8px;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 12px;
	line-height: 12px;
	color: #000000;
}

span.apidoc_requestelementname { /*bold for request element name per wireframe design*/
	color: #000000;
	font-weight: bold;
}

span.apidoc_requestvalue { /*green 00693C for request value per wireframe design*/
	color: #00693C;
}

span.apidoc_red { /*temporary style for draft documents. F00 red, FFF white*/
	color: #F00;
}

.sampleresponse { /*To apply to http line for flexibility*/
	color: #000;
}
/* ... */

